--- a/chat-backend/package.json
+++ b/chat-backend/package.json
@@ -13,11 +13,13 @@
   "dependencies": {
     "@google-cloud/text-to-speech": "^5.5.0",
     "axios": "^1.7.7",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.21.1",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.10.0",
-    "mongoose": "^8.8.1",
+    "mongoose": "^8.9.2",
     "openai": "^4.71.1"
   }
 }
