--- a/chat-backend/package.json
+++ b/chat-backend/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.10.0",
     "mongoose": "^8.9.2",
+    "nodemailer": "^6.10.0",
     "openai": "^4.71.1"
   }
 }
